# rabo_training

./: Readme.md  main.py  pyproject.toml
src/pycart.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pycart/Fileoperation/: fileoperation.py
src/pycart/Order/: order.py
src/pycart/Stock/: constants.py  stock.py
src/pycart/data/: data.json  order_details.json
tests/test_pycart/: conftest.py  test_order.py  test_stock.py
